--- a/Magento_Theme/web/css/source/components/_banner-grid.less
+++ b/Magento_Theme/web/css/source/components/_banner-grid.less
@@ -87,7 +87,7 @@
                     font-size: 1.2rem;
                     color: @color-white;
                     margin: 0 0 1.5rem 0;
-                    text-shadow: 1px 1px 2px rgb(255 255 255 / 47%);
+                    text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.47);
                 }
                 
                 .banner-button {
